syntax = "proto3";

option go_package = "./rpc/pb";

import "file_message.proto";

message ExtractReq {
  string path = 1;
  string name = 2;
}

message ExtractResp {
  string path = 1;
  bool verified = 2;
  repeated FILE data = 3;
}
