syntax = "proto3";

option go_package = "./rpc/pb";

import "app_message.proto";
import "file_message.proto";

message VerifyReq { repeated APP applications = 1; }

message VerifyInfo {
  APP app = 1;
  bool verified = 2;
  repeated FILE data = 3;
}

message VerifyResp { repeated VerifyInfo applications = 1; }
